syntax="proto3";

package user;

service UserService {
    rpc CreateUser (CreateUserDto) returns (ResponseDto) {}
    rpc FindOneUser (FindUserByIdDto) returns (ResponseDto) {}
    rpc UpdateUser (UpdateUserDto) returns (ResponseDto) {}
    rpc QueryUsers (stream PaginationDto) returns (stream Users) {}
    rpc ValidateUser (ValidateUserDto) returns (ResponseDto) {}
}

message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
    int32 limit = 3;
}

message ResponseDto {
    int32 statusCode = 1;
    string message = 2;
    User data = 3;
    bool success = 4;
}

message User {
    string id = 1;
    string email = 2;
}

message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string email = 1;
    string password = 2;
}

message FindUserByIdDto {
    string id = 1;
}

message UpdateUserDto {
    string id = 1;
    string password = 2;
}

message ValidateUserDto {
    string email = 1;
    string password = 2;
}

